--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ async function sendMsg() {
     box.scrollTop = box.scrollHeight;
 
     try {
-        const response = await fetch("http://localhost:9091/api/chat", { 
+       const response = await fetch("https://chatbot-production-97f6.up.railway.app/api/chat", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ message: text })
